networkpolicy/networkpolicy__basic_kafka_setup__prometheus__internet__any__egress__ports__80-443__nr64__lines16.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus--internet--any--egress--ports--80-443--nr64
  namespace: prometheus
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 443
      port: 443
    - protocol: TCP
    - protocol: TCP
      port: 443
